--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark light"> 
+    <meta name="color-scheme" content="dark light">
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/light.css"> 
+    <link rel="stylesheet" href="./styles/light.css">
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="icon" href="./images/favicon.ico" sizes="any">
     <link rel="icon" href="./images/icon.svg" type="image/svg+xml">
@@ -43,11 +43,10 @@
           </li>
         </ul>
       </nav>
-      <h1 class="header__logo">
-        no focus
-      </h1>
+      <h1 class="header__logo">no focus</h1>
       <div class="header__title">
-        Что делать, когда не можешь делать ничего<br>
+        Что делать, когда не можешь делать ничего
+        <br />
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </div>
     </header>
