--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </ul>
       </nav>
       <h1 class="header__logo">no focus</h1>
-      <div class="header__title">
+      <div class="header__title title-decor">
         Что делать, когда не можешь делать ничего
         <br />
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
