--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark light">
+    <meta name="color-scheme" content="dark light" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/globals.css">
-    <link rel="stylesheet" href="./styles/variables.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/light.css">
-    <link rel="stylesheet" href="./styles/dark.css">
-    <link rel="icon" href="./images/favicon.ico" sizes="any">
-    <link rel="icon" href="./images/icon.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/icon.svg" type="image/svg+xml" />
     <title>Сложно сосредоточиться</title>
   </head>
+
   <body class="page">
     <header class="header decorated-zone">
       <nav class="header__theme-menu">
@@ -50,6 +51,42 @@
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </div>
     </header>
+    <div class="main">
+      <section class="first-section">
+        <h2 class="section-header">Почему сосредоточиться так сложно</h2>
+        <div class="section-content">
+          <article>
+            <h3 class="title-decor article-header">Многозадачность</h3>
+            <div>
+              Особенно сложно сосредоточиться, когда задач много и все они —
+              важные. Где же легендарная многозадачность, когда она так нужна
+              вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+              её просто не существует. Исследователи выяснили, что мозгу тяжело
+              концентрироваться даже на двух делах одновременно. А когда в поле
+              внимания попадает несколько важных задач, организм паникует и
+              выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
+              работаем невнимательно: ошибаемся и быстро устаём.
+            </div>
+          </article>
+          <article>
+            <h3 class="title-decor article-header">Дофамин</h3>
+            <div>
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+              нашей невозможности сосредоточиться замешана и полная
+              противоположность стрессу — дофамин. Это вещество участвует в
+              системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
+              от важной задачи на что-то более «приятное» для мозгов. Например,
+              смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
+              чувствуем удовольствие. Получается замкнутый круг: чем больше
+              отвлекаешься, тем больше удовольствия получаешь.
+            </div>
+          </article>
+        </div>
+      </section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </div>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
