--- a/index.html
+++ b/index.html
@@ -52,38 +52,75 @@
       </div>
     </header>
     <div class="main">
-      <section class="first-section">
+      <section class="first-section section">
         <h2 class="section-header">Почему сосредоточиться так сложно</h2>
-        <div class="section-content">
-          <article>
-            <h3 class="title-decor article-header">Многозадачность</h3>
-            <div>
-              Особенно сложно сосредоточиться, когда задач много и все они —
-              важные. Где же легендарная многозадачность, когда она так нужна
-              вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
-              её просто не существует. Исследователи выяснили, что мозгу тяжело
-              концентрироваться даже на двух делах одновременно. А когда в поле
-              внимания попадает несколько важных задач, организм паникует и
-              выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
-              работаем невнимательно: ошибаемся и быстро устаём.
-            </div>
-          </article>
-          <article>
-            <h3 class="title-decor article-header">Дофамин</h3>
-            <div>
-              С гормонами стресса всё понятно, но дальше — ещё интереснее. В
-              нашей невозможности сосредоточиться замешана и полная
-              противоположность стрессу — дофамин. Это вещество участвует в
-              системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
-              от важной задачи на что-то более «приятное» для мозгов. Например,
-              смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
-              чувствуем удовольствие. Получается замкнутый круг: чем больше
-              отвлекаешься, тем больше удовольствия получаешь.
-            </div>
-          </article>
-        </div>
+
+        <article class="first-section__article">
+          <h3 class="title-decor article-header">Многозадачность</h3>
+          <div>
+            Особенно сложно сосредоточиться, когда задач много и все они —
+            важные. Где же легендарная многозадачность, когда она так нужна вам
+            (и всем нанимающим менеджерам этого мира)? А дело в том, что её
+            просто не существует. Исследователи выяснили, что мозгу тяжело
+            концентрироваться даже на двух делах одновременно. А когда в поле
+            внимания попадает несколько важных задач, организм паникует и
+            выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
+            работаем невнимательно: ошибаемся и быстро устаём.
+          </div>
+        </article>
+        <article class="first-section__article">
+          <h3 class="title-decor article-header">Дофамин</h3>
+          <div>
+            С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
+            невозможности сосредоточиться замешана и полная противоположность
+            стрессу — дофамин. Это вещество участвует в системе вознаграждения
+            мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на
+            что-то более «приятное» для мозгов. Например, смотрим лайки в
+            соцсетях. В это время и выделяется дофамин — и мы чувствуем
+            удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
+            тем больше удовольствия получаешь.
+          </div>
+        </article>
       </section>
-      <section></section>
+      <section class="second-section section">
+        <h2 class="section-header second-section__header">
+          Что снижает концентрацию внимания?
+        </h2>
+        <article class="second-section__article">
+          <h3 class="title-decor article-header">Многозадачность</h3>
+          <div>
+            Как концентрация может снижаться из-за… концентрации? Любая
+            стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
+            мозг постоянно «сканировать» окружающую среду на предмет опасности.
+            Например, читать новости вместо работы. Но быть собранными всё время
+            — невозможно. Концентрация — мышца, и она может не выдержать, если
+            не давать ей отдохнуть.
+          </div>
+        </article>
+        <article class="second-section__article">
+          <h3 class="title-decor article-header">Еда</h3>
+          <div>
+            «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+            доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+            эта энергия также быстро, как и приходит. А мы в результате попадаем
+            на «углеводные качели»: как только действие «быстрых углеводов»
+            заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
+            больше быстрых углеводов.
+          </div>
+        </article>
+        <article class="second-section__article">
+          <h3 class="title-decor article-header">Гаджеты</h3>
+          <div>
+            Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+            наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
+            утятами. В результате мозг пытается переключиться с одной задачи на
+            другую — и просто не может. А чтобы вернуться к состоянию полной
+            концентрации, человеку в среднем нужно 20 минут. Вот и получается,
+            что чем больше времени мы проводим в гаджетах, тем больше времени
+            затем нужно, чтобы вернуться к работе.
+          </div>
+        </article>
+      </section>
       <section></section>
       <section></section>
     </div>
