added fourth section

--- a/index.html
+++ b/index.html
@@ -187,7 +187,16 @@
           </ul>
         </article>
       </section>
-      <section></section>
+      <section class="fourth-section section">
+        <h2 class="section-header fourth-section__header title-decor">
+          А можно в картинках?
+        </h2>
+        <img class="first-image" src="./images/sunset.png" alt="Закат, горы, море, чайки" loading="lazy" />
+        <img class="second-image" src="./images/ice-cream.png" alt="Шарики мороженого в чашке" loading="lazy" />
+        <img class="third-image" src="./images/tape.png" alt="Пленочная аудиокассета" loading="lazy" />
+        <img class="fourth-image" src="./images/books.png" alt="Стопка книг" loading="lazy" />
+        <img class="fifth-image" src="./images/street.png" alt="Улица" loading="lazy" />
+      </section>
     </div>
     <script src="./scripts/script.js"></script>
   </body>
