--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@
         <img class="fifth-image" src="./images/street.png" alt="Улица" loading="lazy" />
       </section>
     </div>
+    <footer class="footer decorated-zone">
+      <header class="footer__logo">focus</header>
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
