--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <body class="page">
     <header class="header decorated-zone">
+      <div class="dark-theme-decor">REC</div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
