--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body class="page">
     <header class="header decorated-zone">
-      <div class="dark-theme-decor">REC</div>
+      <div class="dark-theme-decor" aria-hidden="true">REC</div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -62,11 +62,13 @@
             Особенно сложно сосредоточиться, когда задач много и все они —
             важные. Где же легендарная многозадачность, когда она так нужна вам
             (и всем нанимающим менеджерам этого мира)? А дело в том, что её
-            просто не существует. Исследователи выяснили, что мозгу тяжело
-            концентрироваться даже на двух делах одновременно. А когда в поле
-            внимания попадает несколько важных задач, организм паникует и
-            выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
-            работаем невнимательно: ошибаемся и быстро устаём.
+            просто не существует. Исследователи
+            <a href="https://www.dana.org/article/multicosts-of-multitasking/">
+              выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах
+            одновременно. А когда в поле внимания попадает несколько важных
+            задач, организм паникует и выделяет кортизол и адреналин — «гормоны
+            стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
+            устаём.
           </div>
         </article>
         <article class="first-section__article">
@@ -133,7 +135,9 @@
           </h3>
           <ul>
             <li>
-              <h4 class="third-section__list-header title-decor">Представьте небо и облака</h4>
+              <h4 class="third-section__list-header title-decor">
+                Представьте небо и облака
+              </h4>
               <div>
                 Или листья в ручье. Тут дело в лёгкой медитации, которая
                 помогает успокоиться. Ведь часто именно тревожные мысли о
@@ -146,7 +150,9 @@
               </div>
             </li>
             <li>
-              <h4 class="third-section__list-header title-decor">Включите музыку</h4>
+              <h4 class="third-section__list-header title-decor">
+                Включите музыку
+              </h4>
               <div>
                 Но не любую, и не любимую. Любимая может быть связана с сильными
                 положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -155,19 +161,26 @@
               </div>
             </li>
             <li>
-              <h4 class="third-section__list-header title-decor">Прогуляйтесь</h4>
+              <h4 class="third-section__list-header title-decor">
+                Прогуляйтесь
+              </h4>
               <div>
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-                показал, что созерцание природы повышает концентрацию, в то
-                время как после просмотра городских пейзажей она наоборот
-                понижается. Можно совместить прогулку с физическими упражнениями
-                или бегом — так в мозг поступит ещё больше кислорода и он будет
-                лучше работать. Но и простая двадцатиминутная прогулка — тоже
-                отличный вариант. показал
+                <a
+                  href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                >
+                  показал</a>, что созерцание природы повышает концентрацию, в то время как
+                после просмотра городских пейзажей она наоборот понижается.
+                Можно совместить прогулку с физическими упражнениями или бегом —
+                так в мозг поступит ещё больше кислорода и он будет лучше
+                работать. Но и простая двадцатиминутная прогулка — тоже отличный
+                вариант. показал
               </div>
             </li>
             <li>
-              <h4 class="third-section__list-header title-decor">Хорошо ешьте</h4>
+              <h4 class="third-section__list-header title-decor">
+                Хорошо ешьте
+              </h4>
               <div>
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                 которые препятствуют резким скачкам сахара в крови. Например, с
@@ -192,11 +205,36 @@
         <h2 class="section-header fourth-section__header title-decor">
           А можно в картинках?
         </h2>
-        <img class="first-image" src="./images/sunset.png" alt="Закат, горы, море, чайки" loading="lazy" />
-        <img class="second-image" src="./images/ice-cream.png" alt="Шарики мороженого в чашке" loading="lazy" />
-        <img class="third-image" src="./images/tape.png" alt="Пленочная аудиокассета" loading="lazy" />
-        <img class="fourth-image" src="./images/books.png" alt="Стопка книг" loading="lazy" />
-        <img class="fifth-image" src="./images/street.png" alt="Улица" loading="lazy" />
+        <img
+          class="first-image"
+          src="./images/sunset.png"
+          alt="Закат, горы, море, чайки"
+          loading="lazy"
+        />
+        <img
+          class="second-image"
+          src="./images/ice-cream.png"
+          alt="Шарики мороженого в чашке"
+          loading="lazy"
+        />
+        <img
+          class="third-image"
+          src="./images/tape.png"
+          alt="Пленочная аудиокассета"
+          loading="lazy"
+        />
+        <img
+          class="fourth-image"
+          src="./images/books.png"
+          alt="Стопка книг"
+          loading="lazy"
+        />
+        <img
+          class="fifth-image"
+          src="./images/street.png"
+          alt="Улица"
+          loading="lazy"
+        />
       </section>
     </div>
     <footer class="footer decorated-zone">
