--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </div>
     </header>
-    <div class="main">
+    <main class="main">
       <section class="first-section section">
         <h2 class="section-header">Почему сосредоточиться так сложно</h2>
 
@@ -236,7 +236,7 @@
           loading="lazy"
         />
       </section>
-    </div>
+    </main>
     <footer class="footer decorated-zone">
       <header class="footer__logo">focus</header>
     </footer>
