remove header in footer

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <header class="footer__logo">focus</header>
+      <div class="footer__logo">focus</div>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
