--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         </ul>
       </nav>
       <h1 class="header__logo">no focus</h1>
-      <div class="header__title title-decor">
+      <p class="header__title title-decor">
         Что делать, когда не можешь делать ничего
         <br />
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
-      </div>
+      </p>
     </header>
     <main class="main">
       <section class="first-section section">
@@ -58,7 +58,7 @@
 
         <article class="first-section__article">
           <h3 class="title-decor article-header">Многозадачность</h3>
-          <div>
+          <p>
             Особенно сложно сосредоточиться, когда задач много и все они —
             важные. Где же легендарная многозадачность, когда она так нужна вам
             (и всем нанимающим менеджерам этого мира)? А дело в том, что её
@@ -69,11 +69,11 @@
             задач, организм паникует и выделяет кортизол и адреналин — «гормоны
             стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
             устаём.
-          </div>
+          </p>
         </article>
         <article class="first-section__article">
           <h3 class="title-decor article-header">Дофамин</h3>
-          <div>
+          <p>
             С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
             невозможности сосредоточиться замешана и полная противоположность
             стрессу — дофамин. Это вещество участвует в системе вознаграждения
@@ -82,7 +82,7 @@
             соцсетях. В это время и выделяется дофамин — и мы чувствуем
             удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
             тем больше удовольствия получаешь.
-          </div>
+          </p>
         </article>
       </section>
       <section class="second-section section">
@@ -91,29 +91,29 @@
         </h2>
         <article class="second-section__article">
           <h3 class="title-decor article-header">Многозадачность</h3>
-          <div>
+          <p>
             Как концентрация может снижаться из-за… концентрации? Любая
             стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
             мозг постоянно «сканировать» окружающую среду на предмет опасности.
             Например, читать новости вместо работы. Но быть собранными всё время
             — невозможно. Концентрация — мышца, и она может не выдержать, если
             не давать ей отдохнуть.
-          </div>
+          </p>
         </article>
         <article class="second-section__article">
           <h3 class="title-decor article-header">Еда</h3>
-          <div>
+          <p>
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
             доставляют в мозг энергию и помогают ему лучше работать. Но уходит
             эта энергия также быстро, как и приходит. А мы в результате попадаем
             на «углеводные качели»: как только действие «быстрых углеводов»
             заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
             больше быстрых углеводов.
-          </div>
+          </p>
         </article>
         <article class="second-section__article">
           <h3 class="title-decor article-header">Гаджеты</h3>
-          <div>
+          <p>
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в
             наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
             утятами. В результате мозг пытается переключиться с одной задачи на
@@ -121,7 +121,7 @@
             концентрации, человеку в среднем нужно 20 минут. Вот и получается,
             что чем больше времени мы проводим в гаджетах, тем больше времени
             затем нужно, чтобы вернуться к работе.
-          </div>
+          </p>
         </article>
       </section>
       <section class="third-section section">
@@ -138,7 +138,7 @@
               <h4 class="third-section__list-header title-decor">
                 Представьте небо и облака
               </h4>
-              <div>
+              <p>
                 Или листья в ручье. Тут дело в лёгкой медитации, которая
                 помогает успокоиться. Ведь часто именно тревожные мысли о
                 сложных задачах как раз и мешают эти сложные задачи делать. В
@@ -147,24 +147,24 @@
                 ясное небо всегда будет где-то там, за тучами, и никуда не
                 денется. Это упражнение поможет вернуться в настоящий момент, а
                 не волноваться о потенциальных проблемах из будущего.
-              </div>
+              </p>
             </li>
             <li>
               <h4 class="third-section__list-header title-decor">
                 Включите музыку
               </h4>
-              <div>
+              <p>
                 Но не любую, и не любимую. Любимая может быть связана с сильными
                 положительными эмоциями, которые тоже очень сильно отвлекают.
                 Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
                 попробовать включить плейлист в «белым шумом» или нейромузыкой.
-              </div>
+              </p>
             </li>
             <li>
               <h4 class="third-section__list-header title-decor">
                 Прогуляйтесь
               </h4>
-              <div>
+              <p>
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
                 <a
                   href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
@@ -175,28 +175,28 @@
                 так в мозг поступит ещё больше кислорода и он будет лучше
                 работать. Но и простая двадцатиминутная прогулка — тоже отличный
                 вариант. показал
-              </div>
+              </p>
             </li>
             <li>
               <h4 class="third-section__list-header title-decor">
                 Хорошо ешьте
               </h4>
-              <div>
+              <p>
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                 которые препятствуют резким скачкам сахара в крови. Например, с
                 высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
                 чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
                 пшеницы.
-              </div>
+              </p>
             </li>
             <li>
               <h4 class="third-section__list-header title-decor">Читайте</h4>
-              <div>
+              <p>
                 Настоящие бумажные книги. Это правда помогает с концентрацией:
                 чтобы прочитать пост в соцсети, достаточно нескольких минут или
                 даже секунд. А вот интересная книга способна затянуть и на
                 несколько часов и круто тренирует направленное внимание.
-              </div>
+              </p>
             </li>
           </ul>
         </article>
