--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             важные. Где же легендарная многозадачность, когда она так нужна вам
             (и всем нанимающим менеджерам этого мира)? А дело в том, что её
             просто не существует. Исследователи
-            <a href="https://www.dana.org/article/multicosts-of-multitasking/">
+            <a href="https://www.dana.org/article/multicosts-of-multitasking/" target="_blank">
               выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах
             одновременно. А когда в поле внимания попадает несколько важных
             задач, организм паникует и выделяет кортизол и адреналин — «гормоны
@@ -167,14 +167,14 @@
               <p>
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
                 <a
-                  href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
-                >
+                  href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" 
+                  target="_blank">
                   показал</a>, что созерцание природы повышает концентрацию, в то время как
                 после просмотра городских пейзажей она наоборот понижается.
                 Можно совместить прогулку с физическими упражнениями или бегом —
                 так в мозг поступит ещё больше кислорода и он будет лучше
                 работать. Но и простая двадцатиминутная прогулка — тоже отличный
-                вариант. показал
+                вариант.
               </p>
             </li>
             <li>
@@ -232,13 +232,13 @@
         <img
           class="fifth-image"
           src="./images/street.png"
-          alt="Улица"
+          alt="Пешеходный переход на городской улице"
           loading="lazy"
         />
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <div class="footer__logo">focus</div>
+      <h2 class="footer__logo">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
